<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edgesMaskSize"
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edges_mask_size"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.slider.Slider
        android:id="@+id/brightnessSlider"
        android:layout_width="388dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:value="0"
        android:valueFrom="-255"
        android:valueTo="255"
        app:layout_constraintBottom_toTopOf="@+id/autoContrastBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/autoContrastBtn"
        android:layout_width="388dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="makeAutoContrast"
        android:text="@string/auto_contrast"
        app:layout_constraintBottom_toTopOf="@+id/hybridFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hybridFilter"
        android:layout_width="388dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="useHybridFilter"
        android:text="@string/hybrid_filter"
        app:layout_constraintBottom_toTopOf="@+id/set_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/set_reset"
        android:layout_width="388dp"
        android:layout_height="67dp"
        android:layout_marginBottom="4dp"
        android:onClick="openFileChooser"
        android:text="@string/set_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/startImage"
        android:layout_width="512px"
        android:layout_height="512px"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toTopOf="@+id/set_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/changedImage"
        android:layout_width="512px"
        android:layout_height="512px"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toTopOf="@+id/set_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Switch
        android:id="@+id/blurEdgesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:onClick="setEnabled"
        android:text="@string/blur_edges_switch"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/brightness"
        app:layout_constraintBottom_toTopOf="@+id/brightnessSlider"
        app:layout_constraintStart_toStartOf="@+id/brightnessSlider" />

    <ImageView
        android:id="@+id/brightnessTreshholdFullness"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/brightnessCursor"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/brightnessTreshholdFullness"
        app:layout_constraintStart_toStartOf="@+id/brightnessTreshholdFullness"
        app:srcCompat="@drawable/cursor" />

    <ImageView
        android:id="@+id/maskSizeNumberCentral"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/maskSizeCursor"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/maskSizeNumberCentral"
        app:layout_constraintStart_toStartOf="@+id/maskSizeNumberCentral"
        app:srcCompat="@drawable/cursor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="-23dp"
        android:rotation="90"
        android:text="Fullness"
        app:layout_constraintEnd_toStartOf="@+id/brightnessTreshholdFullness"
        app:layout_constraintTop_toTopOf="@+id/brightnessTreshholdFullness" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="-37dp"
        android:rotation="90"
        android:text="Centrall Offest"
        app:layout_constraintEnd_toStartOf="@+id/maskSizeNumberCentral"
        app:layout_constraintTop_toTopOf="@+id/maskSizeNumberCentral" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="Brightness Thresshold"
        app:layout_constraintStart_toStartOf="@+id/brightnessTreshholdFullness"
        app:layout_constraintTop_toBottomOf="@+id/brightnessTreshholdFullness" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:text="Mask Size"
        app:layout_constraintStart_toStartOf="@+id/maskSizeNumberCentral"
        app:layout_constraintTop_toBottomOf="@+id/maskSizeNumberCentral" />

</androidx.constraintlayout.widget.ConstraintLayout>